alignment bug

--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -27,6 +27,7 @@
 
 .skill_item_img {
     display: flex;
+    flex-wrap: wrap;
 
 }
 
